# Refactoring_Calculator

./: .gitignore  CMakeLists.txt  ChessFigure.cpp  ChessFigure.h  ChessFigure.hpp  Coord.h  Makefile  README.md  main.cpp  monolopy.cpp  monolopy.hpp  monopoly.cpp  monopoly.hpp  test.cpp  tic_tac_toe.cpp  tic_tac_toe.hpp
AMamontov/include/: numbersprovider.hpp  string_calc.hpp
AMamontov/src/: CMakeLists.txt  numbersprovider.cpp  string_calc.cpp
Alex.Kunichik/src/: string_calc.cpp
IvanRianichev/: CMakeLists.txt
IvanRianichev/include/: field.hpp  monolopy.hpp  monopoly.hpp  player.hpp
IvanRianichev/src/: CMakeLists.txt  field.cpp  monolopy.cpp  monopoly.cpp  player.cpp
Ivan_Rianichev/include/: string_calc.hpp
Ivan_Rianichev/src/: CMakeLists.txt  string_calc.cpp
MykolaPershyn/: CMakeLists.txt
MykolaPershyn/include/: string_calc.hpp
MykolaPershyn/src/: string_calc.cpp
akuchko/include/: string_calc.hpp
akuchko/src/: string_calc.cpp
alexZhdankin/: BishopFigure.cpp  BishopFigure.h  CMakeLists.txt  ChessFigure.cpp  ChessFigure.h  KingFigure.cpp  KingFigure.h  KnightFigure.cpp  KnightFigure.h  PawnFigure.cpp  PawnFigure.h  QueenFigure.cpp  QueenFigure.h  RookFigure.cpp  RookFigure.h  test.cpp
alexZhdankin/src/: CMakeLists.txt  field.cpp  field.hpp  monopoly.cpp  monopoly.hpp  player.cpp  (+2 more)
include/: Bishop.hpp  ChessFigure.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp  field.hpp  monolopy.hpp  player.hpp  tic_tac_toe.h
monopoly_Mamontov/: CMakeLists.txt
src/: CMakeLists.txt  ChessFigure.cpp  monolopy.cpp  player.cpp  string_calc.cpp
(+33 files in other folders)
